--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DataGathering"
         tools:targetApi="31">
+
+        <service android:name="com.mbientlab.metawear.android.BtleService" />
+
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
