--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.pwr.datagathering"
-        minSdk 30
+        minSdk 28
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -30,8 +30,8 @@ android {
 }
 
 dependencies {
-
-    implementation 'com.mbientlab:metawear:4.0.0'
+    // Version 4.0.0 only supports android 11+, don't update to it
+    implementation 'com.mbientlab:metawear:3.8.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
