--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,22 +25,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ActivityTracker"
         tools:targetApi="31">
+
+        <service android:name="com.mbientlab.metawear.android.BtleService" />
+
+        <activity
+            android:name=".BluetoothActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.ActivityTracker.NoActionBar"
+            />
         <activity
             android:name=".data.model.ui.login.LoginActivity"
-            android:screenOrientation="portrait"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.ActivityTracker.NoActionBar">
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.ActivityTracker.NoActionBar" />
     </application>
 
 </manifest>
