--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
         }
     }
 
+    implementation 'com.google.code.gson:gson:2.10.1'
     // Version 4.0.0 only supports android 11+, don't update to it
     implementation 'com.mbientlab:metawear:3.8.2'
     implementation 'com.github.GrenderG:Toasty:1.5.2'
