1. Small adjustments to login system 2. IP and PORT settings now work 3. added ip and port settings to login screen so that user can change those valuse without being logged in to the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:theme="@style/Theme.ActivityTracker.NoActionBar"
             />
         <activity
-            android:name=".data.model.ui.login.LoginActivity"
+            android:name=".data.model.ui.train.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar">
